--- a/share/main.glade
+++ b/share/main.glade
@@ -13,6 +13,9 @@
           <object class="GtkTreeView" id="treeview1">
             <property name="visible">True</property>
             <property name="can_focus">True</property>
+            <property name="rules_hint">True</property>
+            <property name="enable_search">False</property>
+            <property name="enable_grid_lines">vertical</property>
             <child internal-child="selection">
               <object class="GtkTreeSelection" id="treeview-selection1"/>
             </child>
