--- a/share/main.glade
+++ b/share/main.glade
@@ -16,9 +16,6 @@
             <property name="rules_hint">True</property>
             <property name="enable_search">False</property>
             <property name="enable_grid_lines">vertical</property>
-            <child internal-child="selection">
-              <object class="GtkTreeSelection" id="treeview-selection1"/>
-            </child>
           </object>
           <packing>
             <property name="expand">True</property>
@@ -27,10 +24,14 @@
           </packing>
         </child>
         <child>
-          <object class="GtkStatusbar" id="statusbar1">
+          <object class="GtkLabel" id="statuslabel">
             <property name="visible">True</property>
             <property name="can_focus">False</property>
-            <property name="spacing">2</property>
+            <property name="xalign">0</property>
+            <property name="label" translatable="yes">&lt;span background
+="#ffff00"&gt;Connecting...&lt;/span&gt;</property>
+            <property name="use_markup">True</property>
+            <property name="single_line_mode">True</property>
           </object>
           <packing>
             <property name="expand">False</property>
