--- a/share/main.glade
+++ b/share/main.glade
@@ -10,12 +10,19 @@
         <property name="can_focus">False</property>
         <property name="orientation">vertical</property>
         <child>
-          <object class="GtkTreeView" id="treeview1">
+          <object class="GtkScrolledWindow" id="scrolledwindow1">
             <property name="visible">True</property>
             <property name="can_focus">True</property>
-            <property name="rules_hint">True</property>
-            <property name="enable_search">False</property>
-            <property name="enable_grid_lines">vertical</property>
+            <property name="shadow_type">in</property>
+            <child>
+              <object class="GtkTreeView" id="treeview1">
+                <property name="visible">True</property>
+                <property name="can_focus">True</property>
+                <property name="rules_hint">True</property>
+                <property name="enable_search">False</property>
+                <property name="enable_grid_lines">vertical</property>
+              </object>
+            </child>
           </object>
           <packing>
             <property name="expand">True</property>
